test/force-app/main/default/objects/Employee__c/fields/Employee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Last_Name__c</fullName>
    <label>Employee Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>